--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Assets\Scripts\Enemies\States\LookForPlayerState.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemySpecific\Enemy2\E2_DeadState.cs" />
+    <Compile Include="Assets\Scripts\Projectile\Projectile.cs" />
     <Compile Include="Assets\Scripts\Enemies\States\DodgeState.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemySpecific\Enemy2\E2_StunState.cs" />
     <Compile Include="Assets\Scripts\AnimationToStatemachine.cs" />
@@ -84,12 +85,14 @@
     <Compile Include="Assets\Scripts\Particle\Particle Controller.cs" />
     <Compile Include="Assets\Scripts\Enemies\States\StunState.cs" />
     <Compile Include="Assets\Scripts\Enemies\States\MoveState.cs" />
+    <Compile Include="Assets\Scripts\Enemies\States\RangeAttackState.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemySpecific\Enemy1\E1_MoveState.cs" />
     <Compile Include="Assets\Scripts\Enemies\States\Data\D_MoveState.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemySpecific\Enemy1\E1_MeleeAttackState.cs" />
     <Compile Include="Assets\Scripts\Enemies\State Machine\Entity.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemySpecific\Enemy2\E2_MoveState.cs" />
     <Compile Include="Assets\Scripts\Enemies\States\Data\D_LookForPlayer.cs" />
+    <Compile Include="Assets\Scripts\Enemies\EnemySpecific\Enemy2\E2_RangeAttackState.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemySpecific\Enemy2\E2_LookForPlayerState.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemySpecific\Enemy1\E1_StunState.cs" />
     <Compile Include="Assets\Scripts\Enemies\States\Data\D_DodgeState.cs" />
@@ -112,6 +115,7 @@
     <Compile Include="Assets\Scripts\Enemies\States\PlayerDetectedState.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerStats.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerAfterImageSprite.cs" />
+    <Compile Include="Assets\Scripts\Enemies\States\Data\D_RangeAttackState.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
